--- a/includes/front/css/black-widgets-public.css
+++ b/includes/front/css/black-widgets-public.css
@@ -1008,3 +1008,27 @@
 .bw-m-carousel .owl-item p {font-size: 16px;font-weight: 400;}
 
 
+
+/**
+ * Black Blockquote
+ */
+.bw-blockquote { background: #fff; border-radius: 12px; padding: 40px 30px 40px 30px; box-shadow: 0 7px 80px -24px rgba(0, 0, 0, 0.2); display: flex;}
+.bw-blockquote .bw-icon-into { width: 15%;}
+.bw-blockquote .bw-icon-into i {font-size: 60px; color: #000;}
+.bw-blockquote .bw-icon-into img,
+.bw-blockquote .bw-icon-into svg { max-width: 60px; max-height: 60px; display: block; margin-top: -9px;}
+.bw-blockquote .bw-icon-into img {margin: 0;}
+.bw-blockquote .content { width: 85%; padding-left: 36px; border-left: 4px solid;}
+.bw-blockquote .content .bw-description {color: #000; font-size: 20px; font-weight: 500; margin-bottom: 28px; letter-spacing: 0.014em; line-height: 30px; margin-top: -8px;}
+.bw-blockquote .content .bw-name {color: #000; font-size: 18px; font-weight: 700; letter-spacing: -0.014em; margin: 0 0 -8px 0;}
+
+
+
+
+
+
+
+
+
+
+
