--- a/includes/admin/css/black-widgets-elementor.css
+++ b/includes/admin/css/black-widgets-elementor.css
@@ -80,6 +80,146 @@ body.toplevel_page_black-widgets .bw-box-backend .bw-banner {
     margin: 24px 0;
 }
 
+
+/* BLack Widgets Settings */
+#bw-wrap {
+    padding: 40px;
+}
+
+#bw-wrap h1 {
+    border: unset;
+    font-size: 28px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: -0.03em;
+    color: #000;
+}
+
+#bw-wrap hr {
+    border: 0;
+    height: 6px;
+    background-image: linear-gradient(to right, #0719a3, rgb(7 25 163 / 0.5), rgba(0, 0, 0, 0));
+    max-width: 40%;
+    margin: 0;
+}
+
+#bw-wrap .notice.is-dismissible {
+    margin: 0 0 40px 0;
+    background: rgb(70 180 80 / 14%);
+    border-top: unset;
+    border-right: unset;
+    border-bottom: unset;
+}
+
+#bw-wrap .notice-dismiss:before {
+    color: #000;
+    font-size: 18px;
+    margin-top: 2px;
+}
+
+#bw-wrap .notice.is-dismissible strong {
+    color: #46b450;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+/* Screen Options */
+#bw-wrap input[type=checkbox] {
+    background-color: #fff;
+    border: 1px solid #000;
+    padding: 9px;
+    min-width: 24px;
+    min-height: 24px;
+    transition: all .18s ease;
+    outline: 0;
+    margin: 2px 4px 12px 2px;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 0;
+}
+
+#bw-wrap input[type=checkbox]:focus {
+    box-shadow: unset;
+}
+
+#bw-wrap input[type=checkbox]:checked {
+    border-color: #0719a3;
+    background: #0719a3;
+    border-radius: 2px;
+    position: relative
+}
+
+#bw-wrap input[type=checkbox]:checked:before {
+    content: "";
+    font: normal;
+    position: absolute;
+    top: 9px;
+    left: 3px;
+    margin: 0;
+    vertical-align: middle;
+    line-height: 1;
+    border-right: 2px solid #fff!important;
+    border-bottom: 2px solid #fff!important;
+    transform: rotate(45deg);
+    transform-origin: 0 100%;
+    color: #fff;
+    transition: all .2s ease;
+    animation: bw-check-box 130ms 140ms cubic-bezier(.4,0,.29,1) forwards;
+}
+
+@keyframes bw-check-box {
+    0% {
+        width: 0;
+        height: 0;
+        border-color: #fff;
+        transform: translate3d(0,0,0) rotate(45deg)
+    }
+
+    33% {
+        width: 6px;
+        height: 0;
+        transform: translate3d(0,0,0) rotate(45deg)
+    }
+
+    100% {
+        width: 6px;
+        height: 12px;
+        border-color: #fff;
+        transform: translate3d(0,-12px,0) rotate(45deg)
+    }
+}
+
+#bw-wrap .bw-backend-btn {
+    padding: 12px 28px;
+    font-size: 12px;
+    border-radius: 0;
+    border: 0 solid;
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0);
+    outline: 1px solid;
+    outline-color: rgba(0, 0, 0, 0.5);
+    outline-offset: 0px;
+    text-shadow: none;
+    -webkit-transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    transition: all 1250ms cubic-bezier(0.19, 1, 0.22, 1);
+    background-color: #0719a3 !important;
+    /* background-image: linear-gradient(90deg, #0719a3 0%, #283bcb 50%, #4656cf 100%) !important; */
+    box-shadow: 0 4px 45px -7px #0719a3 !important;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: 2px;
+}
+
+#bw-wrap .bw-backend-btn:focus,
+#bw-wrap .bw-backend-btn:hover {
+    box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 0, 0, 0.2);
+    outline-color: rgba(0, 0, 0, 0);
+    outline-offset: 15px;
+    background-color: #000 !important;
+    /* background-image: linear-gradient(90deg, #000 0%, #222 50%, #333 100%) !important; */
+    box-shadow: 0 4px 45px -7px #000 !important;
+}
+
 /* Elementor Environment*/
 #elementor-panel.elementor-panel {
     background: #000;
