Added Black Sentence
Black Sentence

--- a/includes/front/css/black-widgets-public.css
+++ b/includes/front/css/black-widgets-public.css
@@ -6740,6 +6740,61 @@
 }
 
 
+
+/**
+ * Black Sentence
+ */
+.bw-sentence {
+    position: relative;
+    overflow: visible;
+}
+
+.bw-sentence-absolut {
+    position: absolute;
+}
+
+.bw-sentence h1 {
+    font-size: 56px;
+    text-transform: none;
+}
+
+.bw-sentence .bw-sentence-items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+/* .bw-sentence .bw-sentence-items span {
+    margin: 0 5px;
+} */
+
+.bw-sentence .bw-sentence-items span {
+    margin: 0 5px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.bw-sentence .bw-t-2 {
+    overflow: hidden;
+}
+
+.bw-sentence .bw-t-2 img {
+    width: 220px;
+}
+
+
+
+
+
+
+
+
 /* Parallax */
 .bw-parallax {
     min-height: 400px;
@@ -6749,3 +6804,6 @@
 /* .bw-parallax-x > .e-container{
     z-index: 9999999999;
 } */
+
+
+
